k8s/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  namespace: k8s-contour-bgd-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app
  template:
    metadata:
      labels:
        role: app
        # Set app version: used by service to discriminate app version.
        version: v1
    spec:
      containers:
        - name: app
          image: alexandreroman/hello:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: http
              path: /actuator/health
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              port: http
              path: /actuator/health
            initialDelaySeconds: 15
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  namespace: k8s-contour-bgd-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app
  template:
    metadata:
      labels:
        role: app
        # Set app version: used by service to discriminate app version.
        version: v2
    spec:
      containers:
        - name: app
          image: alexandreroman/hello:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 15
