k8s/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  # Service name is used by IngressRoute.
  name: app-v1
  namespace: k8s-contour-bgd-demo
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    role: app
    # Select pods with version set to v1.
    version: v1
---
apiVersion: v1
kind: Service
metadata:
  # Service name is used by IngressRoute.
  name: app-v2
  namespace: k8s-contour-bgd-demo
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    role: app
    # Select pods with version set to v2.
    version: v2
